--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "moment": "^2.29.1",
+    "sweetalert2": "^10.14.1",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.0",
