--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.0",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "moment": "^2.29.1",
